# EduAgent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  RELEASE_v0.2.1.md  RELEASE_v1.0.0.md  app.py  pipeline_report_demo.md  pipeline_report_newton.md  protocol_comparison.md  pyproject.toml  requirements.txt
agents/: __init__.py  knowledge_mapper.py  lesson_planner.py  quiz_generator.py
core/: __init__.py  agent.py  memory.py  orchestrator.py
docs/: HARNESS_ENGINEERING_GUIDE.md  MULTI_AGENT_TESTING.md  application_form.md
examples/: framework_demo.py  pipeline_experiment.py  quick_start.py
outputs/: lesson_plan_template.md  ppt_outline_template.md  quiz_template.md
src/eduagent/: __init__.py  __main__.py  cli.py
src/eduagent/agents/: __init__.py  image_analyzer.py  knowledge_mapper.py  learning_diagnosis.py  lesson_planner.py  quiz_generator.py  reporter.py
src/eduagent/core/: __init__.py  agent.py  evaluator.py  memory.py  orchestrator.py  structured_protocol.py  tools.py
src/eduagent/framework/: __init__.py  agent_runner.py  automation.py  collaboration.py  context.py  dag_orchestrator.py  fault_tolerance.py  protocol.py
src/eduagent/outputs/: image_analysis_template.md
tests/: test_core.py  test_edge_cases.py
