[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduagent"
version = "0.2.0"
description = "面向教学场景的轻量级多智能体框架 | A lightweight multi-agent framework for teaching"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "fengxaios"},
]
keywords = ["ai-agent", "education", "teaching", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]
demo = [
    "gradio>=4.0",
]

[project.urls]
Homepage = "https://github.com/fengxaios/EduAgent"
Repository = "https://github.com/fengxaios/EduAgent"
Issues = "https://github.com/fengxaios/EduAgent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eduagent = ["outputs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
